more tweaks to readme